--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
       "react-app/jest",
       "prettier"
     ],
-    "plugins": ["prettier"],
+    "plugins": [
+      "prettier"
+    ],
     "rules": {
-      "prettier/prettier": ["error"]
+      "prettier/prettier": 0
     }
   },
   "browserslist": {
@@ -40,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
