--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
       "react-app/jest",
       "prettier"
     ],
-    "plugins": ["prettier"],
+    "plugins": [
+      "prettier"
+    ],
     "rules": {
-      "prettier/prettier": ["error"]
+      "prettier/prettier": 0
     }
   },
   "browserslist": {
@@ -40,11 +42,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.0.0",
+    "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9",
     "vite-plugin-eslint": "^1.8.1"
